logs/django-metro-tiny.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cities_tiny'...
Compiling './lib/python3.5/site-packages/cities_tiny/admin.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (admin.py, line 29)
Listing './lib/python3.5/site-packages/cities_tiny/locale'...
Listing './lib/python3.5/site-packages/cities_tiny/locale/ru'...
Listing './lib/python3.5/site-packages/cities_tiny/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/cities_tiny/management'...
Listing './lib/python3.5/site-packages/cities_tiny/management/commands'...
Compiling './lib/python3.5/site-packages/cities_tiny/management/commands/citiestinyrefresh.py'...
***   File "./lib/python3.5/site-packages/cities_tiny/management/commands/citiestinyrefresh.py", line 29
    'ru': re.compile(ur'^[\u0400-\u04ff-]+$'),
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cities_tiny/models.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (models.py, line 88)
Compiling './lib/python3.5/site-packages/cities_tiny/tests.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (tests.py, line 7)
Listing './lib/python3.5/site-packages/django_cities_tiny-1.0.egg-info'...
Listing './lib/python3.5/site-packages/django_metro_tiny-1.0.egg-info'...
Listing './lib/python3.5/site-packages/metro_tiny'...
Compiling './lib/python3.5/site-packages/metro_tiny/admin.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (admin.py, line 25)
Listing './lib/python3.5/site-packages/metro_tiny/data'...
Listing './lib/python3.5/site-packages/metro_tiny/data/RU'...
Listing './lib/python3.5/site-packages/metro_tiny/locale'...
Listing './lib/python3.5/site-packages/metro_tiny/locale/ru'...
Listing './lib/python3.5/site-packages/metro_tiny/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/metro_tiny/management'...
Listing './lib/python3.5/site-packages/metro_tiny/management/commands'...
Compiling './lib/python3.5/site-packages/metro_tiny/management/commands/metrotinyimport.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (metrotinyimport.py, line 11)
Compiling './lib/python3.5/site-packages/metro_tiny/models.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (models.py, line 14)
Compiling './lib/python3.5/site-packages/metro_tiny/tests.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (tests.py, line 11)
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
